updated project guidelines

--- a/index.Rmd
+++ b/index.Rmd
@@ -69,9 +69,9 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 You can include [Links](https://www.datadreaming.org/post/r-markdown-theme-gallery/) and images ![team logo](https://raw.githubusercontent.com/stat231-s21/Blog-Wrangle-This-Messi-Data/main/images/s1g1-sports.jpeg)
 
-You can embed a gif like this.  (You can also embed a Shiny app using the `iframe` tag.)
+You can embed a gif.
 
-<iframe src="https://giphy.com/embed/XHVmD4RyXgSjd8aUMb" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe> <p> <a href="https://giphy.com/search/pugs">via GIPHY</a> </p>
+![pugs](https://media.giphy.com/media/XHVmD4RyXgSjd8aUMb/giphy.gif)
 
 # You can even create tabs if you want! {.tabset .tabset-fade .tabset-pills}
 
