--- a/index.Rmd
+++ b/index.Rmd
@@ -13,12 +13,17 @@ knitr::opts_chunk$set(echo = TRUE, fig.align="center")
 library(tidyverse)
 ```
 
-# Header 1
+## Introduction
 
-## Header 2
+## Individual Player Spray Charts
 
-### Header 3
+## Splits Comparisons
 
+## Game Simulator
+
+<iframe height="400" width="100%" frameborder="no" src="https://stefanwg.shinyapps.io/BaseballGame/"> </iframe>
+```{r}
+```
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For example, you can include **Bold** and _Italic_ and `Code` text.  For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 You should test out updating your GitHub Pages website:
